--- a/.github/workflows/nodejs-ci.yaml
+++ b/.github/workflows/nodejs-ci.yaml
@@ -2,6 +2,12 @@ name: CI
 
 on:
   workflow_call:
+    inputs:
+      setupAntlr4:
+        description: Set up Antlr4.
+        required: false
+        type: boolean
+        default: false
 
 permissions:
   contents: read
@@ -28,6 +34,10 @@ jobs:
         with:
           node-version: ${{ matrix.node }}
       
+      - name: Set up Antlr4
+        uses: siacodelabs/setup-antlr4
+        if: inputs.setupAntlr4
+      
       - name: Install dependencies
         run: npm ci -ws --include-workspace-root
 
@@ -35,4 +45,4 @@ jobs:
         run: npm run -ws build
      
       - name: Run unit tests
-        run: npm run -ws cov --if-present
+        run: npm run cov
