--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
   "editor.formatOnSave": true,
   "cSpell.language": "en",
-  "cSpell.words": []
+  "cSpell.words": [
+    "antlr",
+    "siacodelabs"
+  ]
 }
