--- a/.github/workflows/nodejs-ci.yaml
+++ b/.github/workflows/nodejs-ci.yaml
@@ -35,7 +35,7 @@ jobs:
           node-version: ${{ matrix.node }}
       
       - name: Set up Antlr4
-        uses: siacodelabs/setup-antlr4
+        uses: siacodelabs/setup-antlr4@v1
         if: inputs.setupAntlr4
       
       - name: Install dependencies
