feat: remove -ws from build step

--- a/.github/workflows/nodejs-ci.yaml
+++ b/.github/workflows/nodejs-ci.yaml
@@ -42,7 +42,7 @@ jobs:
         run: npm ci -ws --include-workspace-root
 
       - name: Build
-        run: npm run -ws build
+        run: npm run build
      
       - name: Run unit tests
         run: npm run cov
