--- a/.github/workflows/nodejs-ci.yaml
+++ b/.github/workflows/nodejs-ci.yaml
@@ -35,8 +35,10 @@ jobs:
           node-version: ${{ matrix.node }}
       
       - name: Set up Antlr4
-        uses: siacodelabs/setup-antlr4@v1.0.2
+        uses: siacodelabs/setup-antlr4@v2
         if: inputs.setupAntlr4
+        with:
+          antlr4-version: 4.9.4
       
       - name: Install dependencies
         run: npm ci -ws --include-workspace-root
