--- a/.github/workflows/nodejs-ci.yaml
+++ b/.github/workflows/nodejs-ci.yaml
@@ -12,39 +12,8 @@ on:
 permissions:
   contents: read
 
-defaults:
-  run:
-    shell: bash -e {0}
-
 jobs:
-  runTests:
-    name: Node.js ${{ matrix.node }} on ${{ matrix.os }}
-    runs-on: ${{ matrix.os }}
-
-    strategy:
-      matrix:
-        node: [18.x]
-        os: [ubuntu-latest]
-
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Node.js ${{ matrix.node }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node }}
-      
-      - name: Set up Antlr4
-        uses: siacodelabs/setup-antlr4@v2
-        if: inputs.setupAntlr4
-        with:
-          antlr4-version: 4.11.1
-      
-      - name: Install dependencies
-        run: npm ci -ws --include-workspace-root
-
-      - name: Build
-        run: npm run build
-     
-      - name: Run unit tests
-        run: npm run cov
+  unit-tests:
+    uses: siacodelabs/.github/github/workflows/nodets-ci.yaml@main
+    with:
+      setup-antlr4: true
