--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,5 @@
 {
   "editor.formatOnSave": true,
   "cSpell.language": "en",
-  "cSpell.words": [
-    "antlr",
-    "siacodelabs"
-  ]
+  "cSpell.words": ["antlr", "nodets", "siacodelabs"]
 }
