--- a/.github/workflows/nodejs-ci.yaml
+++ b/.github/workflows/nodejs-ci.yaml
@@ -14,6 +14,6 @@ permissions:
 
 jobs:
   unit-tests:
-    uses: siacodelabs/.github/github/workflows/nodets-ci.yaml@main
+    uses: siacodelabs/.github/.github/workflows/nodets-ci.yaml@main
     with:
       setup-antlr4: ${{ inputs.setup-antlr4 }}
